package com.hifun.soul.proto.common;
option java_package = "com.hifun.soul.proto.common";
option java_outer_classname = "Items";

// 物品
message Item {
	// UUID
	required string uuid = 1;
	// 模版ID
	required int32 templateId = 2;
	// 背包索引
	required int32 index = 3;
	// 物品数量
	required int32 itemCount = 4;
	// 装备耐久
	optional int32 endure = 5;
	// 装备强化等级
	optional int32 level = 6;
	// 装备特殊属性
	repeated KeyValuePairInt32Int32 equipSpecialAttributes = 7;
	// 装备宝石信息
	repeated GemItemInfo equipGemItemInfos = 8;
	// 宝石属性信息
	repeated KeyValuePairInt32Int32 gemAttributes = 9;
	// 装备孔数
	optional int32 equipHole = 10;
	// 是否已装备
	optional bool isEquiped = 11;
	// 动态属性
	repeated KeyValuePairInt32Int32 dynamicProperty=12;
	// 装备洗练尚未保存的特殊属性
	repeated KeyValuePairInt32Int32 newEquipSpecialAttributes = 13;
}

message KeyValuePairInt32Float {
	// key
	required int32 key = 1;
	// value
	required float value = 2;
}

message KeyValuePairInt32Int32 {
	// key
	required int32 key = 1;
	// value
	required int32 value = 2;
}

message GemItemInfo {
	// 模版ID
	required int32 templateId = 1;
	// 宝石属性
	repeated KeyValuePairInt32Int32 gemAttributes = 2;
	// 孔的位置
	required int32 index = 3;
}